# dead-split

./: .gitignore  Cargo.toml
dead_split_gd/: export_presets.cfg
dead_split_gd/Autoload/: main_timer.gd  timer_settings.gd
dead_split_gd/Settings/: autosplitters.gd  quick_load.gd  settings.gd  settings.tscn  timer_settings_serializable.gd
dead_split_rs/: ;  Cargo.toml
dead_split_rs/src/: autosplitter_manager.rs  hotkey_manager.rs  lib.rs  timer.rs
src/: autosplitter_manager.rs  hotkey_manager.rs  main.rs  settings_menu.rs  timer.rs  timer_components.rs
src/settings_menu/: autosplitter_menu.rs  files_menu.rs  global_settings_menu.rs  hotkey_menu.rs  profiles_menu.rs  run_menu.rs  timer_components_menu.rs
src/timer_components/: split_component.rs
