[package]
name = "dead_split_rs"
version = "0.2.0"
edition = "2021"

[dependencies]
global-hotkey = "0.6.3"
livesplit-core = "0.13.0"
read-process-memory = "0.1.6"
sysinfo = "0.33.1"
egui = "0.31.1"
egui-theme = "0.1.1"
eframe = "0.31.1"
egui-stylist = "0.1.1"
directories = "6.0.0"
config = { version = "0.15.11", features = ["toml"] }
strum = { version = "0.27.1", features = ["derive"] }
rfd = "0.15.3"
# Git repository is used for livesplit-auto-splitting beacuse the crates.io package is dated
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core" }
